--- a/readME
+++ b/readME
@@ -1,1 +1,10 @@
-lab11-12ISP
+ISP Lab 11-12
+Group 30126
+Team members:
+Marka Ruben-Sebastian
+Bardasan Andreea Maria
+Hritcu Luca
+Floristeanu Antonio Pavel
+
+Sample:
+C3
