--- a/readME
+++ b/readME
@@ -2,7 +2,7 @@ ISP Lab 11-12
 Group 30126
 Team members:
 Marka Ruben-Sebastian
-Bardasan Andreea Maria
+Bardasan Maria Andreea
 Hritcu Luca
 Floristeanu Antonio Pavel
 Lunca Andrei
